log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: shared-pvc
      containers:
        - name: log-output-writer
          image: ollikortelahti/devops-with-kubernetes:log-output-writer
          volumeMounts:
          - name: shared-volume
            mountPath: /app/files
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: log-output-reader
          image: ollikortelahti/devops-with-kubernetes:log-output-reader2
          volumeMounts:
          - name: shared-volume
            mountPath: /app/files
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 3000
